2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-document.c (gda_xml_document_get_compress_mode):
	(gda_xml_document_set_compress_mode): new functions

	* gda-util.c (gda_util_hash_to_list): add g_strdup'ed value to the
	returned GList

2001-07-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-database.[ch]: rework

	* gda-common-private.h: new file for common declarations

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-common-defs.h: new file containing some #define's needed
	all over

	* *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-quark-list.c (gda_quark_list_add_from_string): g_strdup
	the hash table key also

	(gda_quark_list_free): free the contents of the hash table

2001-07-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xql-const.[ch], gda-xql-dml.[ch]
	more conversion of the XML queries library

2001-07-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-util.c: gray out the call to xmlIOParseDTD until we can
	use libxml2

2001-07-09  Akira TAGOH <tagoh@gnome-db.org>

	* gda-xml-util.c: fixed typo.

2001-07-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-query/*: moved some files into the libgda-common directory
	itself, with some changes:
		- XmlQueryItem is now GdaXmlItem
		- XmlQueryBin is now GdaXmlBinItem
		- XmlQueryList is now GdaXmlListItem
		- XmlQueryAtom is now GdaXmlAtomItem
		- XmlQueryColumn is now GdaXqlColumn

	* gda-xql.h: new file

2001-07-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-listener.[ch]: implementation of the GDA::Listener CORBA
	interface, used by clients to receive notifications from providers

	* gda-quark-list.[ch]: new file for managing connection strings and
	similar value/pair lists

2001-07-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-file.[ch]: moved to gda-xml-document.[ch]

	* gda-xml-util.[ch]: new file containing several XML ulitity
	functions

2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>
