@@ -1,3 +1,10 @@
+2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-xml-database.c (gda_xml_database_table_find): check for NULL
+	pointers before using them
+	(gda_xml_database_table_new): create the "TABLES" node if it's not
+	created yet
+
 2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-xml-document.c (gda_xml_document_get_compress_mode):
